# faiv-socials

./: .env.example  .gitattributes  .gitignore  README.md  faiv-sociala-medier-byggplan.md  faiv-sociala-medier-watchlist.md  pyproject.toml
.github/workflows/: daily_run.yml  faiv-daily-run.yml
sql/: 001_d1_schema.sql
src/: __init__.py  analyze.py  assets.py  collect.py  config.py  d1.py  deliver.py  discord.py  ingest.py  main.py  models.py  pipeline.py  propose.py  raw_archive.py  sheets.py  utils.py  watchlist.py  workflow_guard.py
tests/: test_assets.py  test_collect.py  test_config.py  test_d1.py  test_delivery.py  test_faiv_rules.py  test_ingest.py  test_parser.py  test_pipeline.py  test_scoring.py  test_workflow_guard.py
