[project]
name = "faiv-socials"
version = "0.1.0"
description = "FAIV social media inspiration pipeline"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.40.0",
  "google-api-python-client>=2.188.0",
  "google-auth>=2.41.1",
  "google-auth-oauthlib>=1.2.0",
  "requests>=2.32.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
